--- a/main.html
+++ b/main.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
 <link href="styling.css" rel="stylesheet" type="text/css">
+<link href="navbar.css" rel="stylesheet" type="text/css">
 
 <head>
-<title>Page Title</title>
+    <title>Page Title</title>
+
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn"> Menu <i class="fa fa-caret-down"></i>
+                </button>
+            <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </div>
+    </div>
+
+
 </head>
+
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
 </body>
-</html> 
+
+</html>
