added snake script at bottom

--- a/main.html
+++ b/main.html
@@ -19,12 +19,16 @@
         </div>
     </div>
 
-
 </head>
 
 <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <h1>Welcome to my website</h1>
+    <p>Here is a picture of me:</p>
+    
+    <img src="bruce.jpg" alt="Bruce Lee" class="center">
+    
+    <canvas width="400" height="400" id="game"></canvas>
+    <script src="snakegame.js"></script>
 </body>
 
 </html>
