--- a/main.html
+++ b/main.html
@@ -4,17 +4,16 @@
 <link href="navbar.css" rel="stylesheet" type="text/css">
 
 <head>
-    <title>Page Title</title>
+    <title>Home</title>
 
     <div class="navbar">
-        <a href="#home">Home</a>
+        <a href="main.html">Home</a>
         <div class="dropdown">
             <button class="dropbtn"> Menu <i class="fa fa-caret-down"></i>
                 </button>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="game.html">Snake Game</a>
+                <a href="aboutme.html">About Me</a>
             </div>
         </div>
     </div>
@@ -23,12 +22,7 @@
 
 <body>
     <h1>Welcome to my website</h1>
-    <p>Here is a picture of me:</p>
-    
-    <img src="bruce.jpg" alt="Bruce Lee" class="center">
-    
-    <canvas width="400" height="400" id="game"></canvas>
-    <script src="snakegame.js"></script>
+    <p>If you click on menu, then you can choose to read about me, or to play the snake game I made!</p>
 </body>
 
 </html>
